<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
              android:layout_height="match_parent"
              app:layout_behavior="@string/appbar_scrolling_view_behavior"
              tools:showIn="@layout/activity_register"
              tools:context="com.yohanes.siantarsmartcity.activity.RegisterActivity"
              android:background="@color/colorPrimary"
              android:orientation="vertical">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="75dp"
            android:id="@+id/imageView6"
            android:background="@drawable/siscylogo"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="Silahkan lengkapi data yang dibutuhkan untuk mulai menggunakan aplikasi Siantar Smart City"
            android:id="@+id/textView4"
            android:textColor="#ffffff"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"/>

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView4">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingTop="150dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext"
                android:hint="@string/hint_name"
                android:padding="10dp"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:textColor="@color/input_register"
                android:textColorHint="@color/place_autocomplete_separator"
                android:layout_margin="10dp"/>

            <EditText
                android:id="@+id/nomor_ktp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext"
                android:hint="Nomor KTP"
                android:padding="10dp"
                android:singleLine="true"
                android:inputType="number"
                android:textColor="@color/input_register"
                android:textColorHint="@color/place_autocomplete_separator"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <EditText
                android:id="@+id/nomor_telepon"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext"
                android:hint="Nomor Telepon"
                android:inputType="number"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/place_autocomplete_separator"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <EditText
                android:id="@+id/alamat"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext"
                android:hint="Alamat Rumah"
                android:padding="10dp"
                android:singleLine="false"
                android:textColor="@color/input_register"
                android:textColorHint="@color/place_autocomplete_separator"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp" />

            <RadioGroup
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:paddingLeft="10dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/radioGroup">

                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Laki-laki"
                    android:id="@+id/rbLaki"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:checked="true"
                    android:textColor="#ffffff"
                    android:buttonTint="#ffffff"/>

                <RadioButton
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="Perempuan"
                    android:id="@+id/rbPerempuan"
                    android:layout_weight="1"
                    android:checked="false"
                    android:textColor="#ffffff"
                    android:buttonTint="#ffffff"/>
            </RadioGroup>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="right"
                android:paddingLeft="10dp"
                android:layout_marginBottom="8dp">

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="150dp"
                    android:id="@+id/imageView3"
                    android:layout_weight="1"
                    android:background="@drawable/edittext"/>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1.75"
                    >

                    <Button
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="Gallery"
                        android:id="@+id/btnUpload"
                        android:drawableLeft="@android:drawable/ic_menu_gallery"
                        android:layout_gravity="top"
                        android:layout_marginRight="5dp"
                        android:onClick="showFileChooser"
                        android:textAlignment="textEnd"
                        android:textColor="#ffffff"
                        android:background="@drawable/btnlight"
                        android:paddingRight="10dp"
                        android:layout_marginLeft="5dp"/>
                </LinearLayout>

            </LinearLayout>


            <EditText
                android:id="@+id/username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext"
                android:hint="Username"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/place_autocomplete_separator"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/place_autocomplete_separator"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/edittext"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/input_register"
                android:textColorHint="@color/place_autocomplete_separator"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />



            <!-- Login Button -->

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btnlight"
                android:text="Daftar"
                android:textColor="@color/foreground_material_dark"
                android:layout_margin="10dp" />

            <!-- Link to Login Screen -->

            <Button
                android:id="@+id/btnLinkToLoginScreen"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btndark"
                android:text="MASUK"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
